JT-8811 Fix wrapping text for BrowseSchools module

--- a/app/assets/stylesheets/pages/community/_communities.scss
+++ b/app/assets/stylesheets/pages/community/_communities.scss
@@ -473,7 +473,7 @@ $line-height-community: 1.428571429;
         @include clearfix;
         font-size: 15px;
         color: #333;
-        margin-right: 15px;
+        margin-right: 20px;
         margin-top: 10px;
         float: right;
       }
